--- a/index_v3.html
+++ b/index_v3.html
@@ -6,7 +6,7 @@
 <style type ="text/css">
 </style>
 </head>
-<body>
+<body style="padding-top:1px;">
 <div id="containerDiv" style="margin:auto;"></div>
 <script type="text/javascript">
 
@@ -46,7 +46,7 @@ var sample = {
 .forceStyle()
 .w(600)
 .h(200)
-.sW("1000px")
+.sW("80%")
 .sH("auto")
 .position("relative")
 .sTop("0px")
