--- a/index_v3.html
+++ b/index_v3.html
@@ -6,7 +6,7 @@
 <style type ="text/css">
 </style>
 </head>
-<body style="padding-top:1px;">
+<body style="padding-top:1px;width:1000px;height:500px;">
 <div id="containerDiv" style="margin:auto;"></div>
 <script type="text/javascript">
 
@@ -47,7 +47,7 @@ var sample = {
 .w(600)
 .h(200)
 .sW("80%")
-.sH("auto")
+.sH("400px")
 .position("relative")
 .sTop("0px")
 .sLeft("0px")
