--- a/tests/index_v4.html
+++ b/tests/index_v4.html
@@ -1,8 +1,8 @@
 <!DOCTYPE html>
 <head>
 <meta charset="utf-8" name="viewport" content="width=device-width, initial-scale=1">
-<script src="http://d3js.org/d3.v3.min.js"></script>
-<script src="./lexiconRainbow.d3v3.min.js"></script>
+<script src="http://d3js.org/d3.v4.min.js"></script>
+<script src="../min/lexiconRainbow.d3v4.min.js"></script>
 <style type ="text/css">
 </style>
 </head>
